--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,12 @@
     "128": "icons/japan50_128.png"
   },
 
+  "browser_action": {
+    "default_icon": "icons/japan50_48.png",
+    "default_title": "Qiita Advent Calendar はてブ カウンター",
+    "default_popup": "popup.html"
+  },
+
   "content_scripts": [
     {
       "matches": [
